added members, invites and fixed bugs